fix: colocando overflow hidden nos cards

--- a/src/App.scss
+++ b/src/App.scss
@@ -274,6 +274,7 @@ video {
       padding: 1%;
       margin: 5%;
       width: 95%;
+      overflow: hidden;
 
       .project-image {
         overflow: hidden;
